...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_increase_counter" />

    <Button
        android:id="@+id/btn_open_login_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open login screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_open_todo_screen"/>
...
